test/should_fail/string_literal.erl
-module(string_literal).

-export([f/0]).

-spec f() -> ok.
f() -> "".
